<resources>
    <string name="app_name">2022-02 Domingo2 G-05</string>
    <string name="txt_grupo">Domingo2 G-05</string>

    <string name="txt_registro_de_alumno">Registro de Alumno</string>
    <string name="txt_registro_de_autor">Registro de Autor</string>
    <string name="txt_registro_de_editorial">Registro de Editorial</string>
    <string name="txt_registro_de_libro">Registro de Libro</string>
    <string name="txt_registro_de_proveedor">Registro de Proveedor</string>
    <string name="txt_registro_de_revista">Registro de Revista</string>
    <string name="txt_registro_de_sala">Registro de Sala 🖥</string>
    <string name="txt_registro_de_usuario">Registro de Usuario</string>

    <string name="txt_consulta_de_alumno">Consulta de Alumno</string>
    <string name="txt_consulta_de_autor">Consulta de Autor</string>
    <string name="txt_consulta_de_editorial">Consulta de Editorial</string>
    <string name="txt_consulta_de_libro">Consulta de Libro</string>
    <string name="txt_consulta_de_proveedor">Consulta de Proveedor</string>
    <string name="txt_consulta_de_revista">Consulta de Revista</string>
    <string name="txt_consulta_de_sala">Consulta de Sala 🖥</string>
    <string name="txt_consulta_de_usuario">Consulta de Usuario</string>

    <string name="txt_crud_de_alumno">Mantenimiento Alumno</string>
    <string name="txt_crud_de_autor">Mantenimiento Autor</string>
    <string name="txt_crud_de_editorial">Mantenimiento Editorial</string>
    <string name="txt_crud_de_libro">Mantenimiento Libro</string>
    <string name="txt_crud_de_proveedor">Mantenimiento Proveedor</string>
    <string name="txt_crud_de_revista">Mantenimiento Revista</string>
    <string name="txt_crud_de_sala">Mantenimiento Sala 🖥</string>
    <string name="txt_crud_de_usuario">Mantenimiento Usuario</string>

    <string name="txt_menu">Menú</string>
    <string name="txt_menu_alumno">Alumno</string>
    <string name="txt_menu_autor">Autor</string>
    <string name="txt_menu_editorial">Editorial</string>
    <string name="txt_menu_libro">Libro</string>
    <string name="txt_menu_proveedor">Proveedor</string>
    <string name="txt_menu_revista">Revista</string>
    <string name="txt_menu_sala">Sala</string>
    <string name="txt_menu_usuario">Usuario</string>

    <string name="txt_MenuInicio">Inicio</string>

    //Para el registro de SALA
    <string name="txt_idSala">Id</string>
    <string name="txt_NumSala">Sala</string>
    <string name="txt_RecursosSala">Recursos</string>
    <string name="txt_SalaSede">Sede</string>
    <string-array name="txtPiso">
        <item> [--- Seleccione ---]</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="txtSede">
        <item> [--- Seleccione ---]</item>
        <item>Lima</item>
        <item>Arequipa</item>
        <item>Trujillo</item>
        <item>Ayacucho</item>
    </string-array>
    <string name="hint_numero">5 caracteres (NLNNN)/(ejm: 1B254)</string>
    <string name="hint_numero_consulta">(Ejm: 7X254)</string>
    <string name="hint_capacidad">Cantidad de personas</string>
    <string name="hint_recurso">Ejm: Laptop, proyector, pizarra, etc.</string>
    <string name="hint_fechareg">año-mes-día / ejm: 2022-10-21</string>
    <string-array name="txtEstado">
        <item> [--- Seleccione ---]</item>
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>
    <string name="btn_Regresar">Regresar</string>



    //para registro pais.
    <string-array name="txtPais">
        <item>[Seleccione]</item>
        <item>Ecuador</item>
        <item>Colombia</item>
        <item>Alemania</item>
        <item>Francia</item>
    </string-array>

</resources>
