<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="7"
    android:padding="10dp"
    >


    <TextView
        android:text="@string/txt_idSala"
        android:id="@+id/idItemIdSala"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:text="@string/txt_NumSala"
        android:id="@+id/idItemNumeroSala"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:text="@string/txt_RecursosSala"
        android:id="@+id/idItemRecursoSala"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</androidx.appcompat.widget.LinearLayoutCompat>