<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/txt_registro_de_sala"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="Número"
        android:textAlignment="center" />

            <EditText
                android:id="@+id/txtRegSalaNumero"
                style="@style/Widget.AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:hint="@string/hint_numero"
                android:maxLength="5"
                android:padding="5dp"
                app:drawableTint="@color/purple_700"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="Piso" />

    <Spinner
        android:id="@+id/spnRegSalaPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:minHeight="48dp"
        android:entries="@array/txtPiso"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="Capacidad" />

            <EditText
                android:id="@+id/txtRegSalaCapa"
                style="@style/Widget.AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:hint="@string/hint_capacidad"
                android:maxLength="2"
                android:padding="5dp"
                app:drawableTint="@color/purple_700"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="Recursos" />

            <EditText
                android:id="@+id/txtRegSalaRec"
                style="@style/Widget.AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:hint="@string/hint_recurso"
                android:maxLength="40"
                android:padding="5dp"
                app:drawableTint="@color/purple_700"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="Fecha Separación" />

            <EditText
                android:id="@+id/txtRegSalaFechaSep"
                style="@style/Widget.AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableStart="@android:drawable/ic_menu_month"
                android:hint="@string/hint_fechareg"
                android:maxLength="10"
                android:padding="5dp"
                app:drawableTint="@color/purple_700"/>

    <Button
        android:id="@+id/btnRegSalaEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="Registrar ✅" />

            <Button
                android:id="@+id/btnRegSalaRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="Regresar ⏪" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>